--- a/css/main.css
+++ b/css/main.css
@@ -28,6 +28,14 @@ body {
   left: 0; top: 0; width: 100%; height: 100%;
 }
 
+.frampton-text {
+  position: fixed;
+  display: block;
+  left: 0; top: 0;
+
+  text-shadow: 1px 0px 1px rgba(0, 0, 0, 0.98), 2px 1px 1px rgba(0, 0, 0, 0.95), 3px 2px 1px rgba(0, 0, 0, .9), 4px 3px 1px rgba(0, 0, 0, .85), 5px 4px 1px rgba(0, 0, 0, .8);
+}
+
 .not-chrome-message {
   position: absolute;
   left: 50%; margin-left: -200px; width: 400px;
